// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component Edit button editable state change when click button 1`] = `
<App>
  <main>
    <Search
      onSearch={[Function]}
    >
      <div>
        <input
          data-test="input"
          onChange={[Function]}
          placeholder="Buscar empleado o empresa"
          type="search"
        />
      </div>
    </Search>
    <Actions
      addEmploy={[Function]}
      changeCurrency={[Function]}
      currency="MXN"
      editable={false}
      printTable={[Function]}
      returnOriginal={[Function]}
      toggleEdit={[Function]}
    >
      <div>
        <button
          data-test="add"
          onClick={[Function]}
        >
          Agregar empleado
        </button>
        <button
          data-test="edit"
          onClick={[Function]}
        >
          Editar
        </button>
        <button
          data-test="currency"
          onClick={[Function]}
        >
          Mostrar en 
          Dolares
        </button>
        <button
          data-test="print"
          onClick={[Function]}
        >
          Imprimir en consola
        </button>
        <button
          data-test="delete"
          onClick={[Function]}
        >
          Eliminar cambios
        </button>
      </div>
    </Actions>
    <Table
      changeType={21.5}
      currency="MXN"
      deleteEmploy={[Function]}
      editable={false}
      employees={
        Array [
          Object {
            "age": 57,
            "company": "América Móvil",
            "email": "eduardo@gmail.com",
            "id": 0,
            "name": "Eduardo González",
            "phone": "(886) 271 4211",
            "salary": 5400,
          },
          Object {
            "age": 40,
            "company": "FEMSA",
            "email": "miguel@gmail.com",
            "id": 1,
            "name": "Miguel Ángel Rodríguez",
            "phone": "(197) 651 8811",
            "salary": 11000,
          },
          Object {
            "age": 34,
            "company": "Banorte",
            "email": "mariana@gmail.com",
            "id": 2,
            "name": "Mariana Gómez",
            "phone": "(396) 702 3554",
            "salary": 16900,
          },
          Object {
            "age": 41,
            "company": "Grupo México",
            "email": "alejandro@gmail.com",
            "id": 3,
            "name": "Alejandro Fernández",
            "phone": "(542) 591 3978",
            "salary": 17700,
          },
          Object {
            "age": 65,
            "company": "Grupo Inbursa",
            "email": "gabriela@gmail.com",
            "id": 4,
            "name": "Gabriela López",
            "phone": "(783) 560 4847",
            "salary": 10100,
          },
          Object {
            "age": 27,
            "company": "Cemex",
            "email": "alejandra@gmail.com",
            "id": 5,
            "name": "Alejandra Díaz",
            "phone": "(862) 721 8605",
            "salary": 6500,
          },
          Object {
            "age": 38,
            "company": "Grupo Televisa",
            "email": "juan@gmail.com",
            "id": 6,
            "name": "Juan Carlos Martínez",
            "phone": "(973) 322 3993",
            "salary": 14000,
          },
          Object {
            "age": 50,
            "company": "Alfa",
            "email": "jose@gmail.com",
            "id": 7,
            "name": "José Luis Pérez",
            "phone": "(226) 806 3427",
            "salary": 20400,
          },
          Object {
            "age": 29,
            "company": "Grupo Bimbo",
            "email": "maria@gmail.com",
            "id": 8,
            "name": "María Carmen García",
            "phone": "(907) 702 7639",
            "salary": 23700,
          },
          Object {
            "age": 23,
            "company": "Liverpool",
            "email": "adriana@gmail.com",
            "id": 9,
            "name": "Adriana Sánchez",
            "phone": "(248) 255 7702",
            "salary": 33800,
          },
        ]
      }
      onEditField={[Function]}
      search=""
      sortBy={[Function]}
      sortedBy={null}
    >
      <table>
        <thead>
          <tr>
            <Heading
              name="name"
              sortBy={[Function]}
              sortedBy={null}
              text="nombre"
            >
              <th
                data-test="sort-name"
                onClick={[Function]}
                style={
                  Object {
                    "background": "",
                  }
                }
              >
                nombre
              </th>
            </Heading>
            <Heading
              name="company"
              sortBy={[Function]}
              sortedBy={null}
              text="Compañía"
            >
              <th
                data-test="sort-company"
                onClick={[Function]}
                style={
                  Object {
                    "background": "",
                  }
                }
              >
                Compañía
              </th>
            </Heading>
            <Heading
              name="salary"
              sortBy={[Function]}
              sortedBy={null}
              text="Salario"
            >
              <th
                data-test="sort-salary"
                onClick={[Function]}
                style={
                  Object {
                    "background": "",
                  }
                }
              >
                Salario
              </th>
            </Heading>
            <Heading
              name="age"
              sortBy={[Function]}
              sortedBy={null}
              text="Edad"
            >
              <th
                data-test="sort-age"
                onClick={[Function]}
                style={
                  Object {
                    "background": "",
                  }
                }
              >
                Edad
              </th>
            </Heading>
            <Heading
              name="phone"
              sortBy={[Function]}
              sortedBy={null}
              text="Télefono"
            >
              <th
                data-test="sort-phone"
                onClick={[Function]}
                style={
                  Object {
                    "background": "",
                  }
                }
              >
                Télefono
              </th>
            </Heading>
            <Heading
              name="email"
              sortBy={[Function]}
              sortedBy={null}
              text="Correo"
            >
              <th
                data-test="sort-email"
                onClick={[Function]}
                style={
                  Object {
                    "background": "",
                  }
                }
              >
                Correo
              </th>
            </Heading>
            <th>
              Borrar
            </th>
          </tr>
        </thead>
        <tbody>
          <Row
            age={57}
            changeType={21.5}
            company="América Móvil"
            currency="MXN"
            deleteEmploy={[Function]}
            editable={false}
            email="eduardo@gmail.com"
            id={0}
            key="0"
            name="Eduardo González"
            onEditField={[Function]}
            phone="(886) 271 4211"
            salary={5400}
          >
            <tr>
              <td>
                <span>
                  Eduardo González
                </span>
              </td>
              <td>
                <span>
                  América Móvil
                </span>
              </td>
              <td>
                <span
                  style={
                    Object {
                      "color": "indianred",
                    }
                  }
                >
                  MX$ 5,400.00
                </span>
              </td>
              <td>
                <span>
                  57
                </span>
              </td>
              <td>
                <span>
                  (886) 271 4211
                </span>
              </td>
              <td>
                <span>
                  eduardo@gmail.com
                </span>
              </td>
              <td>
                <button
                  data-test="delete-0"
                  onClick={[Function]}
                >
                  Borrar
                </button>
              </td>
            </tr>
          </Row>
          <Row
            age={40}
            changeType={21.5}
            company="FEMSA"
            currency="MXN"
            deleteEmploy={[Function]}
            editable={false}
            email="miguel@gmail.com"
            id={1}
            key="1"
            name="Miguel Ángel Rodríguez"
            onEditField={[Function]}
            phone="(197) 651 8811"
            salary={11000}
          >
            <tr>
              <td>
                <span>
                  Miguel Ángel Rodríguez
                </span>
              </td>
              <td>
                <span>
                  FEMSA
                </span>
              </td>
              <td>
                <span
                  style={
                    Object {
                      "color": "seagreen",
                    }
                  }
                >
                  MX$ 11,000.00
                </span>
              </td>
              <td>
                <span>
                  40
                </span>
              </td>
              <td>
                <span>
                  (197) 651 8811
                </span>
              </td>
              <td>
                <span>
                  miguel@gmail.com
                </span>
              </td>
              <td>
                <button
                  data-test="delete-1"
                  onClick={[Function]}
                >
                  Borrar
                </button>
              </td>
            </tr>
          </Row>
          <Row
            age={34}
            changeType={21.5}
            company="Banorte"
            currency="MXN"
            deleteEmploy={[Function]}
            editable={false}
            email="mariana@gmail.com"
            id={2}
            key="2"
            name="Mariana Gómez"
            onEditField={[Function]}
            phone="(396) 702 3554"
            salary={16900}
          >
            <tr>
              <td>
                <span>
                  Mariana Gómez
                </span>
              </td>
              <td>
                <span>
                  Banorte
                </span>
              </td>
              <td>
                <span
                  style={
                    Object {
                      "color": "seagreen",
                    }
                  }
                >
                  MX$ 16,900.00
                </span>
              </td>
              <td>
                <span>
                  34
                </span>
              </td>
              <td>
                <span>
                  (396) 702 3554
                </span>
              </td>
              <td>
                <span>
                  mariana@gmail.com
                </span>
              </td>
              <td>
                <button
                  data-test="delete-2"
                  onClick={[Function]}
                >
                  Borrar
                </button>
              </td>
            </tr>
          </Row>
          <Row
            age={41}
            changeType={21.5}
            company="Grupo México"
            currency="MXN"
            deleteEmploy={[Function]}
            editable={false}
            email="alejandro@gmail.com"
            id={3}
            key="3"
            name="Alejandro Fernández"
            onEditField={[Function]}
            phone="(542) 591 3978"
            salary={17700}
          >
            <tr>
              <td>
                <span>
                  Alejandro Fernández
                </span>
              </td>
              <td>
                <span>
                  Grupo México
                </span>
              </td>
              <td>
                <span
                  style={
                    Object {
                      "color": "seagreen",
                    }
                  }
                >
                  MX$ 17,700.00
                </span>
              </td>
              <td>
                <span>
                  41
                </span>
              </td>
              <td>
                <span>
                  (542) 591 3978
                </span>
              </td>
              <td>
                <span>
                  alejandro@gmail.com
                </span>
              </td>
              <td>
                <button
                  data-test="delete-3"
                  onClick={[Function]}
                >
                  Borrar
                </button>
              </td>
            </tr>
          </Row>
          <Row
            age={65}
            changeType={21.5}
            company="Grupo Inbursa"
            currency="MXN"
            deleteEmploy={[Function]}
            editable={false}
            email="gabriela@gmail.com"
            id={4}
            key="4"
            name="Gabriela López"
            onEditField={[Function]}
            phone="(783) 560 4847"
            salary={10100}
          >
            <tr>
              <td>
                <span>
                  Gabriela López
                </span>
              </td>
              <td>
                <span>
                  Grupo Inbursa
                </span>
              </td>
              <td>
                <span
                  style={
                    Object {
                      "color": "seagreen",
                    }
                  }
                >
                  MX$ 10,100.00
                </span>
              </td>
              <td>
                <span>
                  65
                </span>
              </td>
              <td>
                <span>
                  (783) 560 4847
                </span>
              </td>
              <td>
                <span>
                  gabriela@gmail.com
                </span>
              </td>
              <td>
                <button
                  data-test="delete-4"
                  onClick={[Function]}
                >
                  Borrar
                </button>
              </td>
            </tr>
          </Row>
          <Row
            age={27}
            changeType={21.5}
            company="Cemex"
            currency="MXN"
            deleteEmploy={[Function]}
            editable={false}
            email="alejandra@gmail.com"
            id={5}
            key="5"
            name="Alejandra Díaz"
            onEditField={[Function]}
            phone="(862) 721 8605"
            salary={6500}
          >
            <tr>
              <td>
                <span>
                  Alejandra Díaz
                </span>
              </td>
              <td>
                <span>
                  Cemex
                </span>
              </td>
              <td>
                <span
                  style={
                    Object {
                      "color": "indianred",
                    }
                  }
                >
                  MX$ 6,500.00
                </span>
              </td>
              <td>
                <span>
                  27
                </span>
              </td>
              <td>
                <span>
                  (862) 721 8605
                </span>
              </td>
              <td>
                <span>
                  alejandra@gmail.com
                </span>
              </td>
              <td>
                <button
                  data-test="delete-5"
                  onClick={[Function]}
                >
                  Borrar
                </button>
              </td>
            </tr>
          </Row>
          <Row
            age={38}
            changeType={21.5}
            company="Grupo Televisa"
            currency="MXN"
            deleteEmploy={[Function]}
            editable={false}
            email="juan@gmail.com"
            id={6}
            key="6"
            name="Juan Carlos Martínez"
            onEditField={[Function]}
            phone="(973) 322 3993"
            salary={14000}
          >
            <tr>
              <td>
                <span>
                  Juan Carlos Martínez
                </span>
              </td>
              <td>
                <span>
                  Grupo Televisa
                </span>
              </td>
              <td>
                <span
                  style={
                    Object {
                      "color": "seagreen",
                    }
                  }
                >
                  MX$ 14,000.00
                </span>
              </td>
              <td>
                <span>
                  38
                </span>
              </td>
              <td>
                <span>
                  (973) 322 3993
                </span>
              </td>
              <td>
                <span>
                  juan@gmail.com
                </span>
              </td>
              <td>
                <button
                  data-test="delete-6"
                  onClick={[Function]}
                >
                  Borrar
                </button>
              </td>
            </tr>
          </Row>
          <Row
            age={50}
            changeType={21.5}
            company="Alfa"
            currency="MXN"
            deleteEmploy={[Function]}
            editable={false}
            email="jose@gmail.com"
            id={7}
            key="7"
            name="José Luis Pérez"
            onEditField={[Function]}
            phone="(226) 806 3427"
            salary={20400}
          >
            <tr>
              <td>
                <span>
                  José Luis Pérez
                </span>
              </td>
              <td>
                <span>
                  Alfa
                </span>
              </td>
              <td>
                <span
                  style={
                    Object {
                      "color": "seagreen",
                    }
                  }
                >
                  MX$ 20,400.00
                </span>
              </td>
              <td>
                <span>
                  50
                </span>
              </td>
              <td>
                <span>
                  (226) 806 3427
                </span>
              </td>
              <td>
                <span>
                  jose@gmail.com
                </span>
              </td>
              <td>
                <button
                  data-test="delete-7"
                  onClick={[Function]}
                >
                  Borrar
                </button>
              </td>
            </tr>
          </Row>
          <Row
            age={29}
            changeType={21.5}
            company="Grupo Bimbo"
            currency="MXN"
            deleteEmploy={[Function]}
            editable={false}
            email="maria@gmail.com"
            id={8}
            key="8"
            name="María Carmen García"
            onEditField={[Function]}
            phone="(907) 702 7639"
            salary={23700}
          >
            <tr>
              <td>
                <span>
                  María Carmen García
                </span>
              </td>
              <td>
                <span>
                  Grupo Bimbo
                </span>
              </td>
              <td>
                <span
                  style={
                    Object {
                      "color": "seagreen",
                    }
                  }
                >
                  MX$ 23,700.00
                </span>
              </td>
              <td>
                <span>
                  29
                </span>
              </td>
              <td>
                <span>
                  (907) 702 7639
                </span>
              </td>
              <td>
                <span>
                  maria@gmail.com
                </span>
              </td>
              <td>
                <button
                  data-test="delete-8"
                  onClick={[Function]}
                >
                  Borrar
                </button>
              </td>
            </tr>
          </Row>
          <Row
            age={23}
            changeType={21.5}
            company="Liverpool"
            currency="MXN"
            deleteEmploy={[Function]}
            editable={false}
            email="adriana@gmail.com"
            id={9}
            key="9"
            name="Adriana Sánchez"
            onEditField={[Function]}
            phone="(248) 255 7702"
            salary={33800}
          >
            <tr>
              <td>
                <span>
                  Adriana Sánchez
                </span>
              </td>
              <td>
                <span>
                  Liverpool
                </span>
              </td>
              <td>
                <span
                  style={
                    Object {
                      "color": "seagreen",
                    }
                  }
                >
                  MX$ 33,800.00
                </span>
              </td>
              <td>
                <span>
                  23
                </span>
              </td>
              <td>
                <span>
                  (248) 255 7702
                </span>
              </td>
              <td>
                <span>
                  adriana@gmail.com
                </span>
              </td>
              <td>
                <button
                  data-test="delete-9"
                  onClick={[Function]}
                >
                  Borrar
                </button>
              </td>
            </tr>
          </Row>
        </tbody>
      </table>
    </Table>
  </main>
</App>
`;

exports[`App component Edit button editable state change when click button 2`] = `
<App>
  <main>
    <Search
      onSearch={[Function]}
    >
      <div>
        <input
          data-test="input"
          onChange={[Function]}
          placeholder="Buscar empleado o empresa"
          type="search"
        />
      </div>
    </Search>
    <Actions
      addEmploy={[Function]}
      changeCurrency={[Function]}
      currency="MXN"
      editable={true}
      printTable={[Function]}
      returnOriginal={[Function]}
      toggleEdit={[Function]}
    >
      <div>
        <button
          data-test="add"
          onClick={[Function]}
        >
          Agregar empleado
        </button>
        <button
          data-test="edit"
          onClick={[Function]}
        >
          Guardar
        </button>
        <button
          data-test="currency"
          onClick={[Function]}
        >
          Mostrar en 
          Dolares
        </button>
        <button
          data-test="print"
          onClick={[Function]}
        >
          Imprimir en consola
        </button>
        <button
          data-test="delete"
          onClick={[Function]}
        >
          Eliminar cambios
        </button>
      </div>
    </Actions>
    <Table
      changeType={21.5}
      currency="MXN"
      deleteEmploy={[Function]}
      editable={true}
      employees={
        Array [
          Object {
            "age": 57,
            "company": "América Móvil",
            "email": "eduardo@gmail.com",
            "id": 0,
            "name": "Eduardo González",
            "phone": "(886) 271 4211",
            "salary": 5400,
          },
          Object {
            "age": 40,
            "company": "FEMSA",
            "email": "miguel@gmail.com",
            "id": 1,
            "name": "Miguel Ángel Rodríguez",
            "phone": "(197) 651 8811",
            "salary": 11000,
          },
          Object {
            "age": 34,
            "company": "Banorte",
            "email": "mariana@gmail.com",
            "id": 2,
            "name": "Mariana Gómez",
            "phone": "(396) 702 3554",
            "salary": 16900,
          },
          Object {
            "age": 41,
            "company": "Grupo México",
            "email": "alejandro@gmail.com",
            "id": 3,
            "name": "Alejandro Fernández",
            "phone": "(542) 591 3978",
            "salary": 17700,
          },
          Object {
            "age": 65,
            "company": "Grupo Inbursa",
            "email": "gabriela@gmail.com",
            "id": 4,
            "name": "Gabriela López",
            "phone": "(783) 560 4847",
            "salary": 10100,
          },
          Object {
            "age": 27,
            "company": "Cemex",
            "email": "alejandra@gmail.com",
            "id": 5,
            "name": "Alejandra Díaz",
            "phone": "(862) 721 8605",
            "salary": 6500,
          },
          Object {
            "age": 38,
            "company": "Grupo Televisa",
            "email": "juan@gmail.com",
            "id": 6,
            "name": "Juan Carlos Martínez",
            "phone": "(973) 322 3993",
            "salary": 14000,
          },
          Object {
            "age": 50,
            "company": "Alfa",
            "email": "jose@gmail.com",
            "id": 7,
            "name": "José Luis Pérez",
            "phone": "(226) 806 3427",
            "salary": 20400,
          },
          Object {
            "age": 29,
            "company": "Grupo Bimbo",
            "email": "maria@gmail.com",
            "id": 8,
            "name": "María Carmen García",
            "phone": "(907) 702 7639",
            "salary": 23700,
          },
          Object {
            "age": 23,
            "company": "Liverpool",
            "email": "adriana@gmail.com",
            "id": 9,
            "name": "Adriana Sánchez",
            "phone": "(248) 255 7702",
            "salary": 33800,
          },
        ]
      }
      onEditField={[Function]}
      search=""
      sortBy={[Function]}
      sortedBy={null}
    >
      <table>
        <thead>
          <tr>
            <Heading
              name="name"
              sortBy={[Function]}
              sortedBy={null}
              text="nombre"
            >
              <th
                data-test="sort-name"
                onClick={[Function]}
                style={
                  Object {
                    "background": "",
                  }
                }
              >
                nombre
              </th>
            </Heading>
            <Heading
              name="company"
              sortBy={[Function]}
              sortedBy={null}
              text="Compañía"
            >
              <th
                data-test="sort-company"
                onClick={[Function]}
                style={
                  Object {
                    "background": "",
                  }
                }
              >
                Compañía
              </th>
            </Heading>
            <Heading
              name="salary"
              sortBy={[Function]}
              sortedBy={null}
              text="Salario"
            >
              <th
                data-test="sort-salary"
                onClick={[Function]}
                style={
                  Object {
                    "background": "",
                  }
                }
              >
                Salario
              </th>
            </Heading>
            <Heading
              name="age"
              sortBy={[Function]}
              sortedBy={null}
              text="Edad"
            >
              <th
                data-test="sort-age"
                onClick={[Function]}
                style={
                  Object {
                    "background": "",
                  }
                }
              >
                Edad
              </th>
            </Heading>
            <Heading
              name="phone"
              sortBy={[Function]}
              sortedBy={null}
              text="Télefono"
            >
              <th
                data-test="sort-phone"
                onClick={[Function]}
                style={
                  Object {
                    "background": "",
                  }
                }
              >
                Télefono
              </th>
            </Heading>
            <Heading
              name="email"
              sortBy={[Function]}
              sortedBy={null}
              text="Correo"
            >
              <th
                data-test="sort-email"
                onClick={[Function]}
                style={
                  Object {
                    "background": "",
                  }
                }
              >
                Correo
              </th>
            </Heading>
            <th>
              Borrar
            </th>
          </tr>
        </thead>
        <tbody>
          <Row
            age={57}
            changeType={21.5}
            company="América Móvil"
            currency="MXN"
            deleteEmploy={[Function]}
            editable={true}
            email="eduardo@gmail.com"
            id={0}
            key="0"
            name="Eduardo González"
            onEditField={[Function]}
            phone="(886) 271 4211"
            salary={5400}
          >
            <tr>
              <td>
                <input
                  data-test="input-name-0"
                  defaultValue="Eduardo González"
                  onChange={[Function]}
                />
              </td>
              <td>
                <span>
                  América Móvil
                </span>
              </td>
              <td>
                <input
                  data-test="input-salary-0"
                  defaultValue={5400}
                  onChange={[Function]}
                  type="number"
                />
              </td>
              <td>
                <input
                  data-test="input-age-0"
                  defaultValue={57}
                  onChange={[Function]}
                  type="number"
                />
              </td>
              <td>
                <input
                  data-test="input-phone-0"
                  defaultValue="(886) 271 4211"
                  onChange={[Function]}
                />
              </td>
              <td>
                <input
                  data-test="input-email-0"
                  defaultValue="eduardo@gmail.com"
                  onChange={[Function]}
                  type="email"
                />
              </td>
              <td>
                <button
                  data-test="delete-0"
                  onClick={[Function]}
                >
                  Borrar
                </button>
              </td>
            </tr>
          </Row>
          <Row
            age={40}
            changeType={21.5}
            company="FEMSA"
            currency="MXN"
            deleteEmploy={[Function]}
            editable={true}
            email="miguel@gmail.com"
            id={1}
            key="1"
            name="Miguel Ángel Rodríguez"
            onEditField={[Function]}
            phone="(197) 651 8811"
            salary={11000}
          >
            <tr>
              <td>
                <input
                  data-test="input-name-1"
                  defaultValue="Miguel Ángel Rodríguez"
                  onChange={[Function]}
                />
              </td>
              <td>
                <span>
                  FEMSA
                </span>
              </td>
              <td>
                <input
                  data-test="input-salary-1"
                  defaultValue={11000}
                  onChange={[Function]}
                  type="number"
                />
              </td>
              <td>
                <input
                  data-test="input-age-1"
                  defaultValue={40}
                  onChange={[Function]}
                  type="number"
                />
              </td>
              <td>
                <input
                  data-test="input-phone-1"
                  defaultValue="(197) 651 8811"
                  onChange={[Function]}
                />
              </td>
              <td>
                <input
                  data-test="input-email-1"
                  defaultValue="miguel@gmail.com"
                  onChange={[Function]}
                  type="email"
                />
              </td>
              <td>
                <button
                  data-test="delete-1"
                  onClick={[Function]}
                >
                  Borrar
                </button>
              </td>
            </tr>
          </Row>
          <Row
            age={34}
            changeType={21.5}
            company="Banorte"
            currency="MXN"
            deleteEmploy={[Function]}
            editable={true}
            email="mariana@gmail.com"
            id={2}
            key="2"
            name="Mariana Gómez"
            onEditField={[Function]}
            phone="(396) 702 3554"
            salary={16900}
          >
            <tr>
              <td>
                <input
                  data-test="input-name-2"
                  defaultValue="Mariana Gómez"
                  onChange={[Function]}
                />
              </td>
              <td>
                <span>
                  Banorte
                </span>
              </td>
              <td>
                <input
                  data-test="input-salary-2"
                  defaultValue={16900}
                  onChange={[Function]}
                  type="number"
                />
              </td>
              <td>
                <input
                  data-test="input-age-2"
                  defaultValue={34}
                  onChange={[Function]}
                  type="number"
                />
              </td>
              <td>
                <input
                  data-test="input-phone-2"
                  defaultValue="(396) 702 3554"
                  onChange={[Function]}
                />
              </td>
              <td>
                <input
                  data-test="input-email-2"
                  defaultValue="mariana@gmail.com"
                  onChange={[Function]}
                  type="email"
                />
              </td>
              <td>
                <button
                  data-test="delete-2"
                  onClick={[Function]}
                >
                  Borrar
                </button>
              </td>
            </tr>
          </Row>
          <Row
            age={41}
            changeType={21.5}
            company="Grupo México"
            currency="MXN"
            deleteEmploy={[Function]}
            editable={true}
            email="alejandro@gmail.com"
            id={3}
            key="3"
            name="Alejandro Fernández"
            onEditField={[Function]}
            phone="(542) 591 3978"
            salary={17700}
          >
            <tr>
              <td>
                <input
                  data-test="input-name-3"
                  defaultValue="Alejandro Fernández"
                  onChange={[Function]}
                />
              </td>
              <td>
                <span>
                  Grupo México
                </span>
              </td>
              <td>
                <input
                  data-test="input-salary-3"
                  defaultValue={17700}
                  onChange={[Function]}
                  type="number"
                />
              </td>
              <td>
                <input
                  data-test="input-age-3"
                  defaultValue={41}
                  onChange={[Function]}
                  type="number"
                />
              </td>
              <td>
                <input
                  data-test="input-phone-3"
                  defaultValue="(542) 591 3978"
                  onChange={[Function]}
                />
              </td>
              <td>
                <input
                  data-test="input-email-3"
                  defaultValue="alejandro@gmail.com"
                  onChange={[Function]}
                  type="email"
                />
              </td>
              <td>
                <button
                  data-test="delete-3"
                  onClick={[Function]}
                >
                  Borrar
                </button>
              </td>
            </tr>
          </Row>
          <Row
            age={65}
            changeType={21.5}
            company="Grupo Inbursa"
            currency="MXN"
            deleteEmploy={[Function]}
            editable={true}
            email="gabriela@gmail.com"
            id={4}
            key="4"
            name="Gabriela López"
            onEditField={[Function]}
            phone="(783) 560 4847"
            salary={10100}
          >
            <tr>
              <td>
                <input
                  data-test="input-name-4"
                  defaultValue="Gabriela López"
                  onChange={[Function]}
                />
              </td>
              <td>
                <span>
                  Grupo Inbursa
                </span>
              </td>
              <td>
                <input
                  data-test="input-salary-4"
                  defaultValue={10100}
                  onChange={[Function]}
                  type="number"
                />
              </td>
              <td>
                <input
                  data-test="input-age-4"
                  defaultValue={65}
                  onChange={[Function]}
                  type="number"
                />
              </td>
              <td>
                <input
                  data-test="input-phone-4"
                  defaultValue="(783) 560 4847"
                  onChange={[Function]}
                />
              </td>
              <td>
                <input
                  data-test="input-email-4"
                  defaultValue="gabriela@gmail.com"
                  onChange={[Function]}
                  type="email"
                />
              </td>
              <td>
                <button
                  data-test="delete-4"
                  onClick={[Function]}
                >
                  Borrar
                </button>
              </td>
            </tr>
          </Row>
          <Row
            age={27}
            changeType={21.5}
            company="Cemex"
            currency="MXN"
            deleteEmploy={[Function]}
            editable={true}
            email="alejandra@gmail.com"
            id={5}
            key="5"
            name="Alejandra Díaz"
            onEditField={[Function]}
            phone="(862) 721 8605"
            salary={6500}
          >
            <tr>
              <td>
                <input
                  data-test="input-name-5"
                  defaultValue="Alejandra Díaz"
                  onChange={[Function]}
                />
              </td>
              <td>
                <span>
                  Cemex
                </span>
              </td>
              <td>
                <input
                  data-test="input-salary-5"
                  defaultValue={6500}
                  onChange={[Function]}
                  type="number"
                />
              </td>
              <td>
                <input
                  data-test="input-age-5"
                  defaultValue={27}
                  onChange={[Function]}
                  type="number"
                />
              </td>
              <td>
                <input
                  data-test="input-phone-5"
                  defaultValue="(862) 721 8605"
                  onChange={[Function]}
                />
              </td>
              <td>
                <input
                  data-test="input-email-5"
                  defaultValue="alejandra@gmail.com"
                  onChange={[Function]}
                  type="email"
                />
              </td>
              <td>
                <button
                  data-test="delete-5"
                  onClick={[Function]}
                >
                  Borrar
                </button>
              </td>
            </tr>
          </Row>
          <Row
            age={38}
            changeType={21.5}
            company="Grupo Televisa"
            currency="MXN"
            deleteEmploy={[Function]}
            editable={true}
            email="juan@gmail.com"
            id={6}
            key="6"
            name="Juan Carlos Martínez"
            onEditField={[Function]}
            phone="(973) 322 3993"
            salary={14000}
          >
            <tr>
              <td>
                <input
                  data-test="input-name-6"
                  defaultValue="Juan Carlos Martínez"
                  onChange={[Function]}
                />
              </td>
              <td>
                <span>
                  Grupo Televisa
                </span>
              </td>
              <td>
                <input
                  data-test="input-salary-6"
                  defaultValue={14000}
                  onChange={[Function]}
                  type="number"
                />
              </td>
              <td>
                <input
                  data-test="input-age-6"
                  defaultValue={38}
                  onChange={[Function]}
                  type="number"
                />
              </td>
              <td>
                <input
                  data-test="input-phone-6"
                  defaultValue="(973) 322 3993"
                  onChange={[Function]}
                />
              </td>
              <td>
                <input
                  data-test="input-email-6"
                  defaultValue="juan@gmail.com"
                  onChange={[Function]}
                  type="email"
                />
              </td>
              <td>
                <button
                  data-test="delete-6"
                  onClick={[Function]}
                >
                  Borrar
                </button>
              </td>
            </tr>
          </Row>
          <Row
            age={50}
            changeType={21.5}
            company="Alfa"
            currency="MXN"
            deleteEmploy={[Function]}
            editable={true}
            email="jose@gmail.com"
            id={7}
            key="7"
            name="José Luis Pérez"
            onEditField={[Function]}
            phone="(226) 806 3427"
            salary={20400}
          >
            <tr>
              <td>
                <input
                  data-test="input-name-7"
                  defaultValue="José Luis Pérez"
                  onChange={[Function]}
                />
              </td>
              <td>
                <span>
                  Alfa
                </span>
              </td>
              <td>
                <input
                  data-test="input-salary-7"
                  defaultValue={20400}
                  onChange={[Function]}
                  type="number"
                />
              </td>
              <td>
                <input
                  data-test="input-age-7"
                  defaultValue={50}
                  onChange={[Function]}
                  type="number"
                />
              </td>
              <td>
                <input
                  data-test="input-phone-7"
                  defaultValue="(226) 806 3427"
                  onChange={[Function]}
                />
              </td>
              <td>
                <input
                  data-test="input-email-7"
                  defaultValue="jose@gmail.com"
                  onChange={[Function]}
                  type="email"
                />
              </td>
              <td>
                <button
                  data-test="delete-7"
                  onClick={[Function]}
                >
                  Borrar
                </button>
              </td>
            </tr>
          </Row>
          <Row
            age={29}
            changeType={21.5}
            company="Grupo Bimbo"
            currency="MXN"
            deleteEmploy={[Function]}
            editable={true}
            email="maria@gmail.com"
            id={8}
            key="8"
            name="María Carmen García"
            onEditField={[Function]}
            phone="(907) 702 7639"
            salary={23700}
          >
            <tr>
              <td>
                <input
                  data-test="input-name-8"
                  defaultValue="María Carmen García"
                  onChange={[Function]}
                />
              </td>
              <td>
                <span>
                  Grupo Bimbo
                </span>
              </td>
              <td>
                <input
                  data-test="input-salary-8"
                  defaultValue={23700}
                  onChange={[Function]}
                  type="number"
                />
              </td>
              <td>
                <input
                  data-test="input-age-8"
                  defaultValue={29}
                  onChange={[Function]}
                  type="number"
                />
              </td>
              <td>
                <input
                  data-test="input-phone-8"
                  defaultValue="(907) 702 7639"
                  onChange={[Function]}
                />
              </td>
              <td>
                <input
                  data-test="input-email-8"
                  defaultValue="maria@gmail.com"
                  onChange={[Function]}
                  type="email"
                />
              </td>
              <td>
                <button
                  data-test="delete-8"
                  onClick={[Function]}
                >
                  Borrar
                </button>
              </td>
            </tr>
          </Row>
          <Row
            age={23}
            changeType={21.5}
            company="Liverpool"
            currency="MXN"
            deleteEmploy={[Function]}
            editable={true}
            email="adriana@gmail.com"
            id={9}
            key="9"
            name="Adriana Sánchez"
            onEditField={[Function]}
            phone="(248) 255 7702"
            salary={33800}
          >
            <tr>
              <td>
                <input
                  data-test="input-name-9"
                  defaultValue="Adriana Sánchez"
                  onChange={[Function]}
                />
              </td>
              <td>
                <span>
                  Liverpool
                </span>
              </td>
              <td>
                <input
                  data-test="input-salary-9"
                  defaultValue={33800}
                  onChange={[Function]}
                  type="number"
                />
              </td>
              <td>
                <input
                  data-test="input-age-9"
                  defaultValue={23}
                  onChange={[Function]}
                  type="number"
                />
              </td>
              <td>
                <input
                  data-test="input-phone-9"
                  defaultValue="(248) 255 7702"
                  onChange={[Function]}
                />
              </td>
              <td>
                <input
                  data-test="input-email-9"
                  defaultValue="adriana@gmail.com"
                  onChange={[Function]}
                  type="email"
                />
              </td>
              <td>
                <button
                  data-test="delete-9"
                  onClick={[Function]}
                >
                  Borrar
                </button>
              </td>
            </tr>
          </Row>
        </tbody>
      </table>
    </Table>
  </main>
</App>
`;
